--- a/style.css
+++ b/style.css
@@ -163,8 +163,8 @@ body {
 
 .about-img img{
     padding-bottom: 20%;
-    max-width: 630px;
-    height: auto;
+    max-width: 430px;
+    height: 430px;
     width: 100%;
     border: 2px solid rgb(126, 192, 218);
   padding: 5px;
